@@ -202,7 +202,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="tooltip" translatable="yes">Specify the default height (in pixels) of new notes</property>
-                            <property name="adjustment">1 1 500 10 100 100</property>
+                            <property name="adjustment">1 1 500 10 100 0</property>
                             <property name="climb_rate">1</property>
                             <property name="numeric">True</property>
                           </widget>
@@ -219,7 +219,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="tooltip" translatable="yes">Specify the default width (in pixels) of new notes</property>
-                            <property name="adjustment">1 1 500 10 100 100</property>
+                            <property name="adjustment">1 1 500 10 100 0</property>
                             <property name="climb_rate">1</property>
                             <property name="numeric">True</property>
                           </widget>
