@@ -6,7 +6,7 @@
     <property name="lower">1</property>
     <property name="page_increment">100</property>
     <property name="step_increment">10</property>
-    <property name="page_size">100</property>
+    <property name="page_size">0</property>
     <property name="value">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
@@ -14,7 +14,7 @@
     <property name="lower">1</property>
     <property name="page_increment">100</property>
     <property name="step_increment">10</property>
-    <property name="page_size">100</property>
+    <property name="page_size">0</property>
     <property name="value">1</property>
   </object>
   <object class="GtkUIManager" id="uimanager1">
